[backport] Reset TAMS for uncommitted empty regions to avoid leftover old values