@@ -29,6 +29,8 @@
  * @requires vm.gc.Shenandoah
  * @summary Stress the Shenandoah GC full GC by allocating objects of different lifetimes concurrently with System.gc().
  * @run main/othervm/timeout=300 -Xlog:gc*=info -Xmx512m -XX:+UnlockDiagnosticVMOptions -XX:+ShenandoahVerify -XX:+UseShenandoahGC TestSystemGCWithShenandoah 270
+ * @run main/othervm/timeout=300 -Xlog:gc*=info -Xmx512m -XX:+UnlockDiagnosticVMOptions -XX:+ShenandoahVerify
+ *                               -XX:+UnlockExperimentalVMOptions -XX:ShenandoahGCHeuristics=traversal        -XX:+UseShenandoahGC TestSystemGCWithShenandoah 270
  * @run main/othervm/timeout=300 -Xlog:gc*=info -Xmx512m                                                      -XX:+UseShenandoahGC TestSystemGCWithShenandoah 270
  */
 public class TestSystemGCWithShenandoah {
